--- a/index.html
+++ b/index.html
@@ -118,19 +118,19 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><a href="https://roxiestreams.live/soccer">World Cup Qualifing</td>
-                    <td>November 18, 2025 11:45 AM</td>
-                    <td><span class="countdown-timer" data-start="November 18, 2025 11:45:00" data-end="November 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/soccer">Brasileirão/td>
+                    <td>November 19, 2025 14:30 PM</td>
+                    <td><span class="countdown-timer" data-start="November 19, 2025 14:30:00" data-end="November 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
                     <td><a href="https://roxiestreams.live/nba">NBA</td>
-                    <td>November 18, 2025 16:00 PM</td>
-                    <td><span class="countdown-timer" data-start="November 18, 2025 16:00:00" data-end="November 30, 2025 23:30:00"></span></td>
+                    <td>November 19, 2025 16:00 PM</td>
+                    <td><span class="countdown-timer" data-start="November 19, 2025 16:00:00" data-end="November 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
-                    <td><a href="https://roxiestreams.live/wwe-streams">WWE NXT</td>
-                    <td>November 18, 2025 17:00 PM</td>
-                    <td><span class="countdown-timer" data-start="November 18, 2025 17:00:00" data-end="November 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/aew">AEW</td>
+                    <td>November 19, 2025 17:00 PM</td>
+                    <td><span class="countdown-timer" data-start="November 19, 2025 17:00:00" data-end="November 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
             </tbody>
