--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><a href="https://roxiestreams.live/soccer">Brasileirão/td>
+                    <td><a href="https://roxiestreams.live/soccer">Brasileirão</td>
                     <td>November 19, 2025 14:30 PM</td>
                     <td><span class="countdown-timer" data-start="November 19, 2025 14:30:00" data-end="November 30, 2025 23:30:00"></span></td>
                 </tr>
