--- a/nfl-streams-1.html
+++ b/nfl-streams-1.html
@@ -97,9 +97,9 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
             <div class="streamchanger">
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://abby.qiyarmedia.com/nfl.m3u8')">Stream 1</button>
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://abby.qiyarmedia.com/nflalt.m3u8')">Stream 2</button>
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://abby.qiyarmedia.com/nflalty.m3u8')">Stream 3</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://abby.pixelcraft.qzz.io/nfl.m3u8')">Stream 1</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://abby.pixelcraft.qzz.io/nflalt.m3u8')">Stream 2</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://abby.pixelcraft.qzz.io/nflalty.m3u8')">Stream 3</button>
           </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
@@ -134,7 +134,7 @@
         }
 
         window.onload = function() {
-            showPlayer('clappr', 'https://abby.qiyarmedia.com/nfl.m3u8');
+            showPlayer('clappr', 'https://abby.pixelcraft.qzz.io/nfl.m3u8');
         };
     </script>
     <script>
