--- a/motorsports.html
+++ b/motorsports.html
@@ -121,9 +121,9 @@
 <td><span class="countdown-timer" data-end="November 30, 2025 23:00:00" data-start="November 21, 2025 18:15:00"></span>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/f1-streams">Formula 1 - Free Practice</a></td>
-<td>November 21, 2025 16:30 PM</td>
-<td><span class="countdown-timer" data-end="November 30, 2025 23:00:00" data-start="November 21, 2025 16:30:00"></span>
+<td><a href="https://roxiestreams.live/f1-streams">Formula 1 - Qualifying</a></td>
+<td>November 21, 2025 21:00 PM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 23:00:00" data-start="November 21, 2025 21:0:00"></span>
 </tr>
 <tr>
 </tr></tbody>
