--- a/nba.html
+++ b/nba.html
@@ -138,244 +138,126 @@
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-1">
-         Boston Celtics vs Minnesota Timberwolves
+         Atlanta Hawks vs Detroit Pistons
         </a>
        </td>
        <td>
-        November 29, 2025 2:00 PM
+        December 01, 2025 4:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="November 30, 2025 2:00 PM:00" data-start="November 29, 2025 2:00 PM:00">
+        <span class="countdown-timer" data-end="December 02, 2025 4:00 PM:00" data-start="December 01, 2025 4:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-2">
-         Toronto Raptors vs Charlotte Hornets
+         Cleveland Cavaliers vs Indiana Pacers
         </a>
        </td>
        <td>
-        November 29, 2025 3:00 PM
+        December 01, 2025 4:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="November 30, 2025 3:00 PM:00" data-start="November 29, 2025 3:00 PM:00">
+        <span class="countdown-timer" data-end="December 02, 2025 4:00 PM:00" data-start="December 01, 2025 4:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-3">
-         Chicago Bulls vs Indiana Pacers
+         Milwaukee Bucks vs Washington Wizards
         </a>
        </td>
        <td>
-        November 29, 2025 4:30 PM
+        December 01, 2025 4:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="November 30, 2025 4:30 PM:00" data-start="November 29, 2025 4:30 PM:00">
+        <span class="countdown-timer" data-end="December 02, 2025 4:00 PM:00" data-start="December 01, 2025 4:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-4">
-         Detroit Pistons vs Miami Heat
+         Charlotte Hornets vs Brooklyn Nets
         </a>
        </td>
        <td>
-        November 29, 2025 5:00 PM
+        December 01, 2025 4:30 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="November 30, 2025 5:00 PM:00" data-start="November 29, 2025 5:00 PM:00">
+        <span class="countdown-timer" data-end="December 02, 2025 4:30 PM:00" data-start="December 01, 2025 4:30 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-5">
-         Brooklyn Nets vs Milwaukee Bucks
+         Los Angeles Clippers vs Miami Heat
         </a>
        </td>
        <td>
-        November 29, 2025 5:00 PM
+        December 01, 2025 4:30 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="November 30, 2025 5:00 PM:00" data-start="November 29, 2025 5:00 PM:00">
+        <span class="countdown-timer" data-end="December 02, 2025 4:30 PM:00" data-start="December 01, 2025 4:30 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-6">
-         New Orleans Pelicans vs Golden State Warriors
+         Chicago Bulls vs Orlando Magic
         </a>
        </td>
        <td>
-        November 29, 2025 5:30 PM
+        December 01, 2025 4:30 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="November 30, 2025 5:30 PM:00" data-start="November 29, 2025 5:30 PM:00">
+        <span class="countdown-timer" data-end="December 02, 2025 4:30 PM:00" data-start="December 01, 2025 4:30 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-7">
-         Denver Nuggets vs Phoenix Suns
+         Dallas Mavericks vs Denver Nuggets
         </a>
        </td>
        <td>
-        November 29, 2025 6:00 PM
+        December 01, 2025 6:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="November 30, 2025 6:00 PM:00" data-start="November 29, 2025 6:00 PM:00">
+        <span class="countdown-timer" data-end="December 02, 2025 6:00 PM:00" data-start="December 01, 2025 6:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-8">
-         Dallas Mavericks vs Los Angeles Clippers
-        </a>
-       </td>
-       <td>
-        November 29, 2025 7:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="November 30, 2025 7:00 PM:00" data-start="November 29, 2025 7:00 PM:00">
-        </span>
-       </td>
-      </tr>
-     </tbody>
-    </table>
-    <h2>
-     NBA Schedule for November 30, 2025
-    </h2>
-    <table id="eventsTable">
-     <thead>
-      <tr>
-       <th>
-        Event
-       </th>
-       <th>
-        Start Time
-       </th>
-       <th>
-        Countdown
-       </th>
-      </tr>
-     </thead>
-     <tbody>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-1">
          Houston Rockets vs Utah Jazz
         </a>
        </td>
        <td>
-        November 30, 2025 12:00 PM
+        December 01, 2025 6:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="December 01, 2025 12:00 PM:00" data-start="November 30, 2025 12:00 PM:00">
+        <span class="countdown-timer" data-end="December 02, 2025 6:00 PM:00" data-start="December 01, 2025 6:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
-        <a href="https://roxiestreams.live/nba-streams-2">
-         Boston Celtics vs Cleveland Cavaliers
+        <a href="https://roxiestreams.live/nba-streams-9">
+         Phoenix Suns vs Los Angeles Lakers
         </a>
        </td>
        <td>
-        November 30, 2025 3:00 PM
+        December 01, 2025 7:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="December 01, 2025 3:00 PM:00" data-start="November 30, 2025 3:00 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-3">
-         Toronto Raptors vs New York Knicks
-        </a>
-       </td>
-       <td>
-        November 30, 2025 3:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 01, 2025 3:00 PM:00" data-start="November 30, 2025 3:00 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-4">
-         Atlanta Hawks vs Philadelphia 76ers
-        </a>
-       </td>
-       <td>
-        November 30, 2025 3:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 01, 2025 3:00 PM:00" data-start="November 30, 2025 3:00 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-5">
-         Oklahoma City Thunder vs Portland Trail Blazers
-        </a>
-       </td>
-       <td>
-        November 30, 2025 3:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 01, 2025 3:00 PM:00" data-start="November 30, 2025 3:00 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-6">
-         San Antonio Spurs vs Minnesota Timberwolves
-        </a>
-       </td>
-       <td>
-        November 30, 2025 4:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 01, 2025 4:00 PM:00" data-start="November 30, 2025 4:00 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-7">
-         Memphis Grizzlies vs Sacramento Kings
-        </a>
-       </td>
-       <td>
-        November 30, 2025 6:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 01, 2025 6:00 PM:00" data-start="November 30, 2025 6:00 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-8">
-         New Orleans Pelicans vs Los Angeles Lakers
-        </a>
-       </td>
-       <td>
-        November 30, 2025 6:30 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 01, 2025 6:30 PM:00" data-start="November 30, 2025 6:30 PM:00">
+        <span class="countdown-timer" data-end="December 02, 2025 7:00 PM:00" data-start="December 01, 2025 7:00 PM:00">
         </span>
        </td>
       </tr>
