--- a/soccer.html
+++ b/soccer.html
@@ -96,26 +96,18 @@
 <tbody>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-1">Fenerbahçe vs Galatasaray</a>
-<td>November 30, 2025 09:00 AM</td>
-<td><span class="countdown-timer" data-end="November 30, 2025 18:10:00" data-start="November 29, 2025 19:10:00"></span></td>
+<td>December 01, 2025 09:00 AM</td>
+<td><span class="countdown-timer" data-end="December 02, 2025 08:00:00" data-start="December 01, 2025 09:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-2">Birmingham City vs Watford</a>
-<td>November 30, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="November 30, 2025 18:10:00" data-start="November 29, 2025 19:10:00"></span></td>
+<td>December 01, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="December 02, 2025 11:00:00" data-start="December 01, 2025 12:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-3">Rayo Vallecano vs Valencia</a>
-<td>November 30, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="November 30, 2025 18:10:00" data-start="November 29, 2025 19:10:00"></span></td>
+<td>December 01, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="December 02, 2025 11:00:00" data-start="December 01, 2025 12:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-12">Corinthians vs Botafogo</a>
-<td>November 30, 2025 11:00 AM</td>
-<td><span class="countdown-timer" data-end="November 30, 2025 18:10:00" data-start="November 29, 2025 19:10:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Angers SCO vs Lens</a>
-<td>November 30, 2025 08:15 AM</td>
-<td><span class="countdown-timer" data-end="November 30, 2025 18:10:00" data-start="November 29, 2025 19:10:00"></span></td>
-<tr>
-</tbody></table>
+</tr></td></tr></td></tr></td></tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
