--- a/soccer.html
+++ b/soccer.html
@@ -95,19 +95,35 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Fenerbahçe vs Galatasaray</a>
-<td>December 01, 2025 09:00 AM</td>
-<td><span class="countdown-timer" data-end="December 02, 2025 08:00:00" data-start="December 01, 2025 09:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Bournemouth vs Everton</a>
+<td>December 02, 2025 11:30 AM</td>
+<td><span class="countdown-timer" data-end="December 03, 2025 10:30:00" data-start="December 02, 2025 11:30:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Birmingham City vs Watford</a>
-<td>December 01, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 02, 2025 11:00:00" data-start="December 01, 2025 12:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Fulham vs Manchester City</a>
+<td>December 02, 2025 11:30 AM</td>
+<td><span class="countdown-timer" data-end="December 03, 2025 10:30:00" data-start="December 02, 2025 11:30:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Rayo Vallecano vs Valencia</a>
-<td>December 01, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 02, 2025 11:00:00" data-start="December 01, 2025 12:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Dortmund vs Leverkusen</a>
+<td>December 02, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="December 03, 2025 11:00:00" data-start="December 02, 2025 12:00:00"></span></td>
 <tr>
-</tr></td></tr></td></tr></td></tr></tbody></table>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Barcelona vs Atlético Madrid</a>
+<td>December 02, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="December 03, 2025 11:00:00" data-start="December 02, 2025 12:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-5">Newcastle United vs Tottenham</a>
+<td>December 02, 2025 12:15 PM</td>
+<td><span class="countdown-timer" data-end="December 03, 2025 11:15:00" data-start="December 02, 2025 12:15:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-6">Vasco Da Gama vs Mirassol</a>
+<td>December 02, 2025 14:00 PM</td>
+<td><span class="countdown-timer" data-end="December 03, 2025 13:00:00" data-start="December 02, 2025 14:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-7">Grêmio vs Fluminense</a>
+<td>December 02, 2025 16:30 PM</td>
+<td><span class="countdown-timer" data-end="December 03, 2025 15:30:00" data-start="December 02, 2025 16:30:00"></span></td>
+<tr>
+</tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
