--- a/nba-streams-9.html
+++ b/nba-streams-9.html
@@ -98,7 +98,7 @@
             <div id="playerContainer"></div>
             <div class="streamchanger">
                 <button class="streambutton" onclick="showPlayer('clappr', 'https://abby.pixelcraft.qzz.io/nba6.m3u8')">Stream 1</button>
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://simplee.pixelcraft.qzz.io/nba2.m3u8')">Stream 2</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://thedaffodil.wnion.co.in/nba2.m3u8')">Stream 2</button>
             </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
