--- a/fighting.html
+++ b/fighting.html
@@ -96,9 +96,9 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/wwe-streams">WWE NXT</a></td>
-<td>December 02, 2025 17:00 PM</td>
-<td><span class="countdown-timer" data-end="December 31, 2025 23:59:00" data-start="December 02, 2025 17:00:00"></span></td>
+<td><a href="https://roxiestreams.live/aew">AEW</a></td>
+<td>December 03, 2025 17:00 PM</td>
+<td><span class="countdown-timer" data-end="December 31, 2025 23:59:00" data-start="December 03, 2025 17:00:00"></span></td>
 </tr>
 </tbody>
 </table>
