--- a/nfl-streams-11.html
+++ b/nfl-streams-11.html
@@ -97,8 +97,8 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
             <div class="streamchanger">
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://loveliness.wnion.co.in/nfl11.m3u8')">Stream 1</button>
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://loveliness.wnion.co.in/nflalt.m3u8')">Stream 2</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://600.shadow-ran.online/nfl11.m3u8')">Stream 1</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://600.shadow-ran.online/nflalt.m3u8')">Stream 2</button>
           </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
@@ -133,7 +133,7 @@
         }
 
         window.onload = function() {
-            showPlayer('clappr', 'https://loveliness.wnion.co.in/nfl11.m3u8');
+            showPlayer('clappr', 'https://600.shadow-ran.online/nfl11.m3u8');
         };
     </script>
     <script>
